feat: add log levels, uncaughtException and unhandledRejection logs
